# RNTest5

./: App.tsx  Global.js  README.md  RNBuildBat_BuildAAB.bat  RNBuildBat_BuildReleaseApk.bat  RNBuildBat_Clean.bat  RNBuildBat_RemoveTempFiles.bat  RNBuildBat_StartDebug.bat  ScreenUtil.js  Settings.js  ViewMain.js  app.json  package-lock.json  package.json
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/timscodes/fileshare/: MainActivity.kt  MainApplication.kt  MyNativeModule.java  MyNativePackage.java
android/app/src/main/jni/: CMakeLists.txt  CMongooseWebClient.cpp  CMongooseWebClient.h  CMongooseWebServer.cpp  CMongooseWebServer.h  OnLoad.cpp  TcpClient.cpp  TcpClient.h  TcpPacketHandleClient.cpp  TcpPacketHandleServer.cpp  functions.h  key.h  native-lib.cpp
android/app/src/main/jni/AES/: rijndael-api-fst.h
android/app/src/main/jni/md5/: md5.cpp
android/app/src/main/jni/sqlite/: SQLiteDB.cpp  SQLiteDB.h
ios/: NativeSampleModuleProvider.h  NativeSampleModuleProvider.mm  Podfile
ios/newOne1/: AppDelegate.swift  CMongooseWebClient.cpp  CRITICAL_SECTION.cpp  CRITICAL_SECTION.h  Info.plist  LaunchScreen.storyboard  MyNativeModule.h  MyNativeModule.mm  TcpPacketServer.cpp  TcpPacketServer.h  TcpServer.cpp  TcpServer.h  functions.cpp  key.h
ios/newOne1.xcodeproj/: project.pbxproj
ios/newOne1.xcodeproj/xcshareddata/xcschemes/: newOne1.xcscheme
ios/newOne1/AES/: AESCrypt.h  rijndael-alg-fst.cpp  rijndael-api-fst.cpp
ios/newOne1/json/: json_value.cpp
ios/newOne1/json/json/: value.h
ios/newOne1/md5/: md5.cpp  md5.h
shared/: NativeSampleModule.cpp  NativeSampleModule.h
specs/: NativeSampleModule.ts
